# DharmaGPT

./: .dockerignore  .env.docker  .env.example  .gitignore  AZURE.md  DEPLOY.md  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf  pyproject.toml  render.env  render.yaml
app/: config.py  main.py
app/api/: routes.py  schemas.py
app/graph/: llm.py  state.py  workflow.py
app/graph/nodes/: citation_validation.py  context_selection.py  query_analyzer.py  response_generation.py  scripture_retrieval.py
app/knowledge_base/: constants.py  schemas.py  story_db.py  taxonomies.py
app/rag/: bm25.py  embeddings.py  loaders.py  retriever.py  rrf.py  splitter.py  vectorstore.py
app/templates/: response.py
data/: stories.json
data/gita/: sample_verses.json
data/ramayana/: sample_passages.json
frontend/: .dockerignore  index.html  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatView.tsx  SettingsView.tsx  Sidebar.tsx  UploadView.tsx
scripts/: ingest_gita.py  ingest_pdf.py  ingest_ramayana.py  ingest_stories.py
tests/: test_rag.py
