[project]
name = "dharmagpt"
version = "0.1.0"
description = "AI-powered Dharma guide using Bhagavad Gita and Ramayana wisdom"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-postgres>=0.0.17",
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27.0",
    "sentence-transformers>=3.0",
    "langchain-huggingface>=0.1.0",
    "pypdf>=5.0",
    "python-multipart>=0.0.20",
    "numpy>=1.26",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
